Fix extra space in header p items.

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -25,6 +25,11 @@ header {
   font-weight: lighter;
 }
 
+p {
+  text-indent: 0px;
+  line-height: 1.6;
+}
+
 @media only screen and (max-width: 600px) {
   .header h1 {
     font-size: medium;
